# arxiv-digest

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  patch.sh  pyproject.toml
.github/workflows/: ci-cd.yaml  release-please.yaml
app/: build_vector.py  db.py  deliver.py  embeddings.py  fetch.py  storage_sqlite.py  summarize.py  triage.py  triage_vector.py
db/: schema.sql
docker/: entrypoint.sh
tools/: reset_last_n.py  smtp_probe.py
